language/move-lang/tests/move_check/expansion/duplicate_function_in_module.exp
error: 

   ┌── tests/move_check/expansion/duplicate_function_in_module.move:2:9 ───
   │
 2 │     fun foo() { }
   │         --- Previously defined here
 3 │     fun foo() { }
   │         ^^^ Duplicate definition for function 'foo' in module 'M'
   │

